--- a/api/qsharp/microsoft.quantum.canon.applyifzeroa.yml
+++ b/api/qsharp/microsoft.quantum.canon.applyifzeroa.yml
@@ -7,9 +7,9 @@ summary: >-
   应用对经典结果值为零的 adjointable 运算。
 
 
-  给定一个操作 `op` 并且结果值 `result`，如果 `result` `Zero`，则将 `op` 应用于 `target`。 如果 `One`，则 `target`不会执行任何操作。
+  给定一个操作`op`和一个结果值`result`时， `op` `target`如果`result`为`Zero`，则应用于。 如果`One`为，则不会`target`发生任何事情。
 
-  后缀 `A` 指示要应用的操作是 adjointable。
+  后缀`A`指示要应用的操作是 adjointable。
 syntax: "operation ApplyIfZeroA (result : Result, (op : ('T => Unit is Adj), target : 'T)) : Unit"
 input:
   content: "(result : Result, (op : ('T => Unit is Adj), target : 'T))"
@@ -50,9 +50,9 @@ seeAlso:
 - microsoft.quantum.canon.applyifzeroa
 - microsoft.quantum.canon.applyifzeroca
 metadata:
-  ms.openlocfilehash: 626bb5bbd18cceb409632ec0d27b48c6ea98fbbe
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: b8b85714f173e10d3121d6f012fefa76b956686e
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73220719"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82672617"
