--- a/api/qsharp/microsoft.quantum.amplitudeamplification.amplitudeamplificationfrompartialreflections.yml
+++ b/api/qsharp/microsoft.quantum.amplitudeamplification.amplitudeamplificationfrompartialreflections.yml
@@ -7,7 +7,7 @@ summary: 通过部分反射放大幅度。
 remarks: >-
   振幅放大是一种特殊的在意波幅放大，其中没有系统 qubits，而在意 oracle 设置为 identity。
 
-  在大多数情况下，`startQubits` 在状态 $ \ket{\text{start}}\_$1 中初始化，后者是 `startStateReflection`的 $-$1 eigenstate。
+  在大多数情况下`startQubits` ，在状态 $ \ket{\text{start}}\_$1 中初始化，后者是的`startStateReflection`$-$1 eigenstate。
 syntax: 'function AmplitudeAmplificationFromPartialReflections (phases : Microsoft.Quantum.AmplitudeAmplification.ReflectionPhases, startStateReflection : Microsoft.Quantum.Oracles.ReflectionOracle, targetStateReflection : Microsoft.Quantum.Oracles.ReflectionOracle) : (Qubit[] => Unit is Adj + Ctl)'
 input:
   content: '(phases : Microsoft.Quantum.AmplitudeAmplification.ReflectionPhases, startStateReflection : Microsoft.Quantum.Oracles.ReflectionOracle, targetStateReflection : Microsoft.Quantum.Oracles.ReflectionOracle)'
@@ -39,9 +39,9 @@ output:
     - Adjoint
     - Controlled
 metadata:
-  ms.openlocfilehash: 8fd7ecce6a7623158e26ec4db6732daf114490af
-  ms.sourcegitcommit: ca5015fed409eaf0395a89c2e4bc6a890c360aa2
+  ms.openlocfilehash: 4dae118f99c8a2e7cf933a378ed38d414a94fef4
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/29/2020
-  ms.locfileid: "76872302"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82673005"
