--- a/api/qsharp/microsoft.quantum.arithmetic.addfxp.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.addfxp.yml
@@ -7,8 +7,8 @@ summary: >-
   添加存储在量程寄存器中的两个定点数。
 
 
-  在状态 $ \ket{f_1} $ 和 $ \ket{f_2} $ 中分别给定两个定点寄存器，执行操作 $ \ket{f_1} \ket{f_2} \mapsto \ket{f_1} \ket{f_1 + f_2} $。
-remarks: 当前实现要求两个固定点数字与最小有效位之间具有相同的点位置计数，即 $n _i $ 和 $p _i $ 必须相等。
+  在状态 $ \ket{f_1} $ 和 $ \ket{f_2} $ 中分别给定了两个定点寄存器，执行操作 $ \ket{f_1} \ket{f_2} \mapsto \ket{f_1} \ket{f_1 + f_2} $。
+remarks: 当前实现要求两个固定点数字与最小有效位之间具有相同的点位置计数，即 $n _i $，$p _i $ 必须相等。
 syntax: 'operation AddFxP (fp1 : Microsoft.Quantum.Arithmetic.FixedPoint, fp2 : Microsoft.Quantum.Arithmetic.FixedPoint) : Unit'
 input:
   content: '(fp1 : Microsoft.Quantum.Arithmetic.FixedPoint, fp2 : Microsoft.Quantum.Arithmetic.FixedPoint)'
@@ -28,9 +28,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 142c7927519e59fb3df1661b3beadd32cda0d2c8
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 75b6e15299b6e0394af8cb530ee7bc66dc07c336
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73215415"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82672904"
