--- a/api/qsharp/microsoft.quantum.arithmetic.multiplyandaddphasebymodularinteger.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.multiplyandaddphasebymodularinteger.yml
@@ -5,9 +5,9 @@ type: operation
 namespace: Microsoft.Quantum.Arithmetic
 summary: 与 MultiplyAndAddByModularInteger 相同，但假定被加数将整数编码为 QFT。
 remarks: >-
-  假定 `phaseSummand` 的最大位设置为0。
+  `phaseSummand`假定将最高位设置为0。
 
-  还假定 `phaseSummand` 的值小于 $N $。
+  还假定的值`phaseSummand`小于 $N $。
 syntax: 'operation MultiplyAndAddPhaseByModularInteger (constMultiplier : Int, modulus : Int, multiplier : Microsoft.Quantum.Arithmetic.LittleEndian, phaseSummand : Microsoft.Quantum.Arithmetic.PhaseLittleEndian) : Unit'
 input:
   content: '(constMultiplier : Int, modulus : Int, multiplier : Microsoft.Quantum.Arithmetic.LittleEndian, phaseSummand : Microsoft.Quantum.Arithmetic.PhaseLittleEndian)'
@@ -20,7 +20,7 @@ input:
     isPrimitive: true
     uid: Int
   - name: multiplier
-    summary: 一个量程寄存器，表示其值要添加到 `summand`的每个基础状态标签的无符号整数。
+    summary: 一个量程寄存器，表示其值要添加到的每个基本状态标签的`summand`无符号整数。
     uid: microsoft.quantum.arithmetic.littleendian
   - name: phaseSummand
     summary: 一个量程寄存器，表示要用作此操作的目标的无符号整数。
@@ -36,9 +36,9 @@ functors:
 seeAlso:
 - microsoft.quantum.arithmetic.multiplyandaddbymodularinteger
 metadata:
-  ms.openlocfilehash: 3728e95ad26768d486af79e7c4158a2a2715bbd2
-  ms.sourcegitcommit: ca5015fed409eaf0395a89c2e4bc6a890c360aa2
+  ms.openlocfilehash: 029ff8fb767ae018b7462f19a5fe09e83e606c6e
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/29/2020
-  ms.locfileid: "76871390"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82672807"
