--- a/api/qsharp/microsoft.quantum.canon.applyifelsebca.yml
+++ b/api/qsharp/microsoft.quantum.canon.applyifelsebca.yml
@@ -7,17 +7,17 @@ summary: >-
   应用两个单一操作之一，具体取决于传统位的值。
 
 
-  给定一个位 `bit`，当 `bit` 为 `true`时，应用 `trueInput` 作为其输入的操作 `trueOp`，并在 `falseOp(falseInput)` `bit` 时应用 `false`。
+  给定一个位`bit`，在为时`trueOp`应用`trueInput`该操作，并`bit`在`true`为时应用`falseOp(falseInput)` `bit`该操作`false`。
 syntax: "operation ApplyIfElseBCA (bit : Bool, (trueOp : ('T => Unit is Adj + Ctl), trueInput : 'T), (falseOp : ('U => Unit is Adj + Ctl), falseInput : 'U)) : Unit"
 input:
   content: "(bit : Bool, (trueOp : ('T => Unit is Adj + Ctl), trueInput : 'T), (falseOp : ('U => Unit is Adj + Ctl), falseInput : 'U))"
   types:
   - name: bit
-    summary: 用于确定是否应用 `trueOp` 或 `falseOp` 的布尔值。
+    summary: 用于确定是否`trueOp`应用或`falseOp`的布尔值。
     isPrimitive: true
     uid: Bool
   - name: trueOp
-    summary: '`true``bit` 时要应用的单一操作。'
+    summary: 在为`bit` `true`时要应用的单一操作。
     isOperation: true
     input:
       types:
@@ -31,11 +31,11 @@ input:
     - Adjoint
     - Controlled
   - name: trueInput
-    summary: 当 `bit` `true`时，提供给 `trueOp` 的输入。
+    summary: 当为`trueOp` `bit` `true`时要向其提供的输入。
     uid: "'T"
     isLocal: true
   - name: falseOp
-    summary: '`false``bit` 时要应用的单一操作。'
+    summary: 在为`bit` `false`时要应用的单一操作。
     isOperation: true
     input:
       types:
@@ -49,7 +49,7 @@ input:
     - Adjoint
     - Controlled
   - name: falseInput
-    summary: 当 `bit` `false`时，提供给 `falseOp` 的输入。
+    summary: 当为`falseOp` `bit` `false`时要向其提供的输入。
     uid: "'U"
     isLocal: true
 output:
@@ -59,9 +59,9 @@ output:
     uid: Unit
 typeParameters:
 - uid: "'T"
-  summary: 要有条件地应用 `trueOp` 操作的输入类型。
+  summary: 要有条件地应用的`trueOp`操作的输入类型。
 - uid: "'U"
-  summary: 要有条件地应用 `falseOp` 操作的输入类型。
+  summary: 要有条件地应用的`falseOp`操作的输入类型。
 functors:
 - Adjoint
 - Controlled
@@ -72,9 +72,9 @@ seeAlso:
 - microsoft.quantum.canon.applyifelsera
 - microsoft.quantum.canon.applyifelserca
 metadata:
-  ms.openlocfilehash: 526170a58fcab51aa36abeee6bd1573dc5eeddbb
-  ms.sourcegitcommit: ca5015fed409eaf0395a89c2e4bc6a890c360aa2
+  ms.openlocfilehash: 3f0d704d33fc1d3e964e804c2ff68cb893069445
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/29/2020
-  ms.locfileid: "76871322"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82672774"
