--- a/api/qsharp/microsoft.quantum.canon.applyifzeroc.yml
+++ b/api/qsharp/microsoft.quantum.canon.applyifzeroc.yml
@@ -7,9 +7,9 @@ summary: >-
   应用在传统结果值为零的可控操作。
 
 
-  给定一个操作 `op` 并且结果值 `result`，如果 `result` `Zero`，则将 `op` 应用于 `target`。 如果 `One`，则 `target`不会执行任何操作。
+  给定一个操作`op`和一个结果值`result`时， `op` `target`如果`result`为`Zero`，则应用于。 如果`One`为，则不会`target`发生任何事情。
 
-  后缀 `C` 指示要应用的操作可控制。
+  后缀`C`指示要应用的操作可控制。
 syntax: "operation ApplyIfZeroC (result : Result, (op : ('T => Unit is Ctl), target : 'T)) : Unit"
 input:
   content: "(result : Result, (op : ('T => Unit is Ctl), target : 'T))"
@@ -50,9 +50,9 @@ seeAlso:
 - microsoft.quantum.canon.applyifzeroa
 - microsoft.quantum.canon.applyifzeroca
 metadata:
-  ms.openlocfilehash: 6bb3b5900df1a2afcd4bb42fde3b68397804da46
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 12484848b3208dcb0a52e1f2084bbc3a5f4ec359
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73217370"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82672601"
